--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -26,9 +26,15 @@
       <height>50</height>
      </rect>
     </property>
+    <property name="focusPolicy">
+     <enum>Qt::ClickFocus</enum>
+    </property>
     <property name="styleSheet">
      <string notr="true">background-color: rgb(255, 255, 255);
-border-radius: 5px;</string>
+border-radius: 5px;
+pressed {
+	font-size: 25px;
+}</string>
     </property>
     <property name="text">
      <string>play</string>
